--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -208,6 +208,7 @@ libproj_la_SOURCES = \
 	transformations/affine.cpp \
 	transformations/deformation.cpp \
 	transformations/helmert.cpp \
+	transformations/lschelmert.cpp \
 	transformations/hgridshift.cpp \
 	transformations/horner.cpp \
 	transformations/molodensky.cpp \
@@ -224,6 +225,9 @@ libproj_la_SOURCES = \
 	\
 	aasincos.cpp adjlon.cpp \
 	dmstor.cpp auth.cpp \
+	pps.hpp pps.cpp \
+	geojsonPolygon.hpp geojsonPolygon.cpp \
+	point_in_polygon.h matrixutils.h \
 	deriv.cpp ell_set.cpp ellps.cpp \
 	factors.cpp fwd.cpp init.cpp inv.cpp \
 	list.cpp malloc.cpp mlfn.cpp mlfn.hpp msfn.cpp proj_mdist.cpp \
