--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ proj_add_gie_test("GDA" "gie/GDA.gie")
 proj_add_gie_test("4D-API-cs2cs-style" "gie/4D-API_cs2cs-style.gie")
 proj_add_gie_test("DHDN_ETRS89" "gie/DHDN_ETRS89.gie")
 proj_add_gie_test("Unitconvert" "gie/unitconvert.gie")
+#proj_add_gie_test("NOTransformation" "gie/NOTransformation.gie")
 proj_add_gie_test("geotiff_grids" "gie/geotiff_grids.gie")
 proj_add_gie_test("adams_hemi" "gie/adams_hemi.gie")
 proj_add_gie_test("adams_ws1" "gie/adams_ws1.gie")
