--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -119,10 +119,12 @@ add_executable(proj_test_cpp_api
   test_common.cpp
   test_crs.cpp
   test_metadata.cpp
+  test_matrix.cpp
   test_io.cpp
   test_operation.cpp
   test_operationfactory.cpp
   test_datum.cpp
+  test_geojson.cpp
   test_factory.cpp
   test_c_api.cpp
   test_grids.cpp)
